Added pinging orb component and created a space component that will connect the UI elements vertically.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "ldrs": "^1.0.1",
     "lucide-react": "^0.290.0",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
@@ -32,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "reactflow": "^11.10.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
