--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-fade-in": "^2.0.1",
     "react-hook-form": "^7.48.2",
     "reactflow": "^11.10.1",
     "tailwind-merge": "^1.14.0",
