--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@types/three": "^0.160.0",
     "ai": "^2.2.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -37,6 +38,8 @@
     "reactflow": "^11.10.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.134.0",
+    "vanta": "^0.5.24",
     "zod": "^3.22.4"
   },
   "devDependencies": {
